# MagnusDownloader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
